# django-tutorial

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/users/: selectors.py  serializers.py  services.py  urls.py  views.py
apps/users/tests/: test_views.py
config/settings/: base.py  development.py  production.py
core/: exceptions.py  pagination.py  permissions.py  utils.py
deploy/gunicorn/: gunicorn.conf.py
deploy/nginx/: nginx.conf
deploy/supervisor/: supervisord.conf
scripts/: seed_data.py
